# mss-career-portal

./: .gitignore  README.md  add_views_column.py  career_portal.sql  fix_db_columns.py  fix_fk_job_interview.py  pyproject.toml  temp_script.js  temp_script_fixed.js
app/: main.py  requirements.txt
app/core/: config.py  database.py  html_helper.py  logger.py  oauth.py  otp_service.py  security.py
app/crud/: auth_crud.py  common.py  hr_crud.py  job_apply_crud.py  job_interview_crud.py  jobs_crud.py  notification_crud.py  school_admin_crud.py
app/models/: __init__.py  admin_model.py  candidate_education_model.py  candidate_experience_model.py  candidate_metadata_model.py  candidate_screening_answer_model.py  interview_remarks_model.py  interview_schedule_model.py  job_applicant_model.py  job_post_model.py  job_prescreeningquestion_model.py  job_view_log_model.py  notification_logs_model.py  otp_logs_model.py  unit_model.py  user_model.py  user_roles_model.py  userlogin_model.py
app/routes/: auth_route.py  hr_route.py  interview_auth_route.py  job_apply_route.py  job_interview_route.py  jobs_route.py  notification_route.py  school_admin_route.py
mss-career-portal/: education.json  index.html  main.py  skills.json  style.css
mss-career-portal/apis/: jobs.js
mss-career-portal/assets/css/: shared-header.css  style.css  styles.css
mss-career-portal/assets/js/: app.js  (+3 more)
mss-career-portal/components/: candidate-navbar.html  header.html  hr-sidebar.html  school-sidebar.html
mss-career-portal/pages/: admin-login.html
uploads/resumes/: resume_12_1782190531.docx
(+38 files in other folders)
