[project]
name = "career-portal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt<4.0.0",
    "fastapi>=0.136.1",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.13.0",
    "pymysql>=1.2.0",
    "python-multipart>=0.0.29",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.47.0",
]
